--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -1,5 +1,6 @@
 -# in app/views/movies/show.html.haml
 // =debug(@movie)
+
 %h2 Details about #{@movie.title}
 
 %ul#details
@@ -14,4 +15,6 @@
 
 %p#description= @movie.description
 
+= link_to 'Edit info', edit_movie_path(@movie)
+= link_to 'Delete', movie_path(@movie), :method => :delete
 = link_to 'Back to movie list', movies_path
