--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -80,3 +80,13 @@ form label {
   font-weight: bold;
   color: maroon;
 }
+#banner {
+  background-color: rgb(90, 90, 90);
+  padding: 8px;
+  text-align: center;
+  color: red;
+}
+
+tr:hover {
+  background-color: yellow;
+}
