--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,13 +5,16 @@
     = stylesheet_link_tag 'application'
     = javascript_include_tag 'application'
     = csrf_meta_tags
+    
+  %h1#banner
+    = link_to "Rotten Potatoes", movies_path
 
   %body
     
     - if flash[:notice]
       #notice.message= flash[:notice]
     - elsif flash[:warning]
-      #warning.message[:warning]
+      #warning.message = flash[:warning]
       
     #main
       = yield
