--- a/app/views/movies/new.html.haml
+++ b/app/views/movies/new.html.haml
@@ -7,8 +7,13 @@
 
   = label :movie, :rating, 'Rating'
   = select :movie, :rating, ['G','PG','PG-13','R','NC-17']
+  
+  = label :movie, :description, 'Description'
+  = text_field :movie, :description
  
   = label :movie, :release_date, 'Released On'
-  = date_select :movie, :release_date
+  = date_select :movie, :release_date, start_year: 1930
 
   = submit_tag 'Save Changes'
+  
+  = link_to "Cancel", movies_path
